# esp-libsupla

./: .gitmodules  CMakeLists.txt  Kconfig  README.md  component.mk
esp-supla/: esp-supla-httpd.c  esp-supla.c
esp-supla-utils/: esp-supla-utils.c
examples/default/: CMakeLists.txt  Makefile  README.md
examples/default/main/: main.c  wifi.c  wifi.h
include/: esp-supla-utils.h  esp-supla.h
platform/: arch_esp.c
